Modified file to address project review comments

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -200,7 +200,10 @@
     "    If you want to make the lines semi-transparent, think about combining\n",
     "    this function with the weighted_img() function below\n",
     "    \"\"\"\n",
-    "     \n",
+    "     \"\"\"\n",
+    "     Used the ideas for improving my algorithm by looking at examples online. \n",
+    "     Reference used: https://github.com/paramaggarwal/CarND-LaneLines-P1/blob/master/P1.ipynb\n",
+    "     \"\"\"\n",
     "  \n",
     "    global IMG_LEFT\n",
     "    global IMG_RIGHT\n",
@@ -621,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -696,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -713,7 +716,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 87%|█████████████████████████████████████████████████████████████████████▊          | 219/251 [00:13<00:02, 14.93it/s]"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 251/251 [00:15<00:00, 16.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: extra.mp4 \n",
+      "\n",
+      "Wall time: 17 s\n"
      ]
     }
    ],
@@ -726,11 +739,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"extra.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
